@@ -1,4 +1,5 @@
 2006-05-15  Alex Roitman  <shura@gramps-project.org>
+	* src/DataViews/_SourceView.py (edit,on_double_click): Catch exception.
 	* configure.in: Generate new Makefile.
 	* src/Makefile.am: adapt to new module.
 	* src/Selectors: separate selectors in their own module.
